# ChargeApp

./: .gitignore  README.md  pyproject.toml  spi
src/app/: ChargeApp.db  app.ipynb  app.py  fetch_data.ipynb  interactive_map.ipynb  map.ipynb  regio-charging-2.md  regio-charging-2_short.md  save_data.ipynb
src/data/: ChargeApp.csv  ChargeApp.html  ChargeApp.kgl.json  fz1_2023.xlsx
src/data_handler/: __init__.py  create_db.py  fetch_data.ipynb  fetch_data.py  fetch_geojson.py  geojson.py  geojson2.py  kreis_find.py  new_geojson.py  save_data.ipynb  save_data.py  save_data_pylint.py  stations_find.py
src/kreis_loader/: __init__.py  kreis_find.py
src/map_drawer/: __init__.py  draw_map.py
src/stations_loader/: __init__.py  stations_find.py
src/tomtom/: search_api.ipynb
tests/: basic-pie-chart.html  draw_map.ipynb  save_data.ipynb  test.ipynb  test.py
